# django-rest-framework-simplejwt

./: .gitignore  Makefile  azure-pipelines.yml  pyproject.toml  tox.ini
docs/: conf.py  djangorestframework_simplejwt.rst  djangorestframework_simplejwt.token_blacklist.management.commands.rst  djangorestframework_simplejwt.token_blacklist.management.rst  djangorestframework_simplejwt.token_blacklist.migrations.rst  djangorestframework_simplejwt.token_blacklist.rst
rest_framework_simplejwt/: backends.py  settings.py  state.py  tokens.py
tests/: test_backends.py  urls.py
